# alouette

./: .gitignore  .gitmodules  Android-Build-Guide.md  Android构建指南.md  README.md  RELEASE.md  generate-icons.sh  index.html  monitor-emulator.sh  package.json  quick-android-build.sh  setup-env.sh  setup_github.sh
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-web.yml  build-windows.yml  release-apps.yml  release.yml
alouette-lib-trans/example/lib/: main.dart
alouette-lib-trans/lib/src/providers/: ollama_provider.dart
alouette-lib-trans/lib/src/services/: llm_config_service.dart
alouette-lib-tts/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
alouette-lib-tts/android/: build.gradle
alouette-lib-tts/android/src/main/: AndroidManifest.xml
alouette-lib-tts/example/: pubspec.yaml
alouette-lib-tts/example/lib/: main.dart
alouette-lib-tts/lib/: alouette_lib_tts.dart
alouette-lib-tts/lib/src/: alouette_tts_service.dart
alouette-lib-tts/lib/src/exceptions/: tts_exceptions.dart
alouette-lib-tts/lib/src/factory/: tts_factory.dart
alouette-lib-tts/lib/src/models/: alouette_tts_config.dart  language_option.dart  tts_config.dart  tts_state.dart
alouette-lib-tts/lib/src/platform/: platform_detector.dart
alouette-lib-tts/lib/src/services/: edge_tts_service.dart  error_recovery_service.dart  flutter_tts_service.dart  retry_tts_service.dart  (+2 more)
alouette-lib-tts/test/: integration_test.dart
alouette-lib-tts/test/exceptions/: tts_exceptions_test.dart
alouette-lib-tts/test/models/: language_option_test.dart  tts_config_test.dart
alouette-lib-tts/test/services/: tts_service_test.dart
alouette-lib-tts/test/utils/: tts_constants_test.dart
alouette_app/: pubspec.yaml
alouette_app/lib/app/: app_router.dart
alouette_app/linux/: CMakeLists.txt
alouette_app_trans/: pubspec.yaml
alouette_app_tts/: pubspec.yaml  run_app.ps1
alouette_app_tts/lib/config/: tts_app_config.dart
alouette_lib_trans/: README.md  pubspec.yaml
alouette_lib_tts/: pubspec.yaml
alouette_ui/: pubspec.yaml
docs/: ANDROID_EMULATOR_SETUP.md  ANDROID_IMPLEMENTATION_SUMMARY.md  ANDROID_TTS_FIX_SUMMARY.md  TEST_ANDROID_TTS.md
src/: App.vue  index.html  style.css  styles.css
src-tauri/: Cargo.toml  system_prompt.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_tts.rs  lib.rs  lm_studio.rs  main.rs  ollama.rs  tts.rs
src/assets/: script.js  styles.css
(+30 files in other folders)
