[package]
name = "alouette"
version = "0.1.0"
description = "A Tauri App for translation and TTS"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "alouette_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "alouette"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
rodio = "0.17"
sha2 = "0.10"
dirs = "5.0"
once_cell = "1.21.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Android specific configurations
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

# Android link configuration  
[profile.release]
strip = false
lto = false

[profile.dev]
strip = false
